[tool.poetry]
name = "emoji-search"
version = "1.0.2"
description = "The #1 Python tool for miscellaneous emoji info"
authors = ["Dawson Booth <pypi@dawsonbooth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dawsonbooth/emoji-search"
repository = "https://github.com/dawsonbooth/emoji-search"
keywords = ["cli", "console", "emoji", "unicode", "emoticon", "emojipedia", "scrape", "web", "search"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]
packages = [
    { include = "emoji" },
]

[tool.poetry.scripts]
emoji-search = 'console:main'

[tool.poetry.dependencies]
python = "^3.5"
beautifulsoup4 = "^4.9.1"
lxml = "^4.5.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
autopep8 = "^1.5"
pylint = "^2.4.4"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
